--- a/dev-perl/Proc-WaitStat/ChangeLog
+++ b/dev-perl/Proc-WaitStat/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Proc-WaitStat
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Proc-WaitStat/ChangeLog,v 1.4 2006/03/30 23:14:17 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Proc-WaitStat/ChangeLog,v 1.5 2006/07/03 11:59:02 ian Exp $
+
+  03 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  Proc-WaitStat-1.00.ebuild:
+  Added tests and missing RDEPEND
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Proc-WaitStat-1.00.ebuild:
   Mark 1.00 ~ia64
