--- a/media-gfx/blender/ChangeLog
+++ b/media-gfx/blender/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/blender
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/blender/ChangeLog,v 1.83 2006/07/02 03:28:07 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/blender/ChangeLog,v 1.84 2006/07/03 13:56:39 lu_zero Exp $
+
+*blender-2.41 (03 Jul 2006)
+
+  03 Jul 2006; Luca Barbato <lu_zero@gentoo.org> +blender-2.41.ebuild:
+  Cleanup ahead of time, restored blender-2.41
 
   02 Jul 2006; Luca Barbato <lu_zero@gentoo.org> -blender-2.40.ebuild,
   -blender-2.41.ebuild:
