--- a/dev-perl/Apache-AuthCookie/ChangeLog
+++ b/dev-perl/Apache-AuthCookie/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Apache-AuthCookie
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Apache-AuthCookie/ChangeLog,v 1.4 2006/03/30 22:08:14 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Apache-AuthCookie/ChangeLog,v 1.5 2006/07/03 20:07:15 ian Exp $
+
+  03 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  Apache-AuthCookie-3.08.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   Apache-AuthCookie-3.08.ebuild:
