--- a/dev-perl/CPAN-Mini-Phalanx/ChangeLog
+++ b/dev-perl/CPAN-Mini-Phalanx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/CPAN-Mini-Phalanx
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini-Phalanx/Attic/ChangeLog,v 1.3 2006/03/30 22:16:56 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini-Phalanx/Attic/ChangeLog,v 1.4 2006/07/03 20:34:59 ian Exp $
+
+  03 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  CPAN-Mini-Phalanx-0.01.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   CPAN-Mini-Phalanx-0.01.ebuild:
