--- a/dev-perl/CPAN-Mini/ChangeLog
+++ b/dev-perl/CPAN-Mini/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/CPAN-Mini
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.4 2006/03/30 22:16:00 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.5 2006/07/03 20:33:26 ian Exp $
+
+  03 Jul 2006; Christian Hartmann <ian@gentoo.org> CPAN-Mini-0.40.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> CPAN-Mini-0.40.ebuild:
   Mark 0.40 ~ia64
