--- a/dev-perl/Carp-Assert/ChangeLog
+++ b/dev-perl/Carp-Assert/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Carp-Assert
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Carp-Assert/ChangeLog,v 1.8 2006/03/30 22:17:24 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Carp-Assert/ChangeLog,v 1.9 2006/07/03 20:56:08 ian Exp $
+
+  03 Jul 2006; Christian Hartmann <ian@gentoo.org> Carp-Assert-0.18.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Carp-Assert-0.18.ebuild:
   Mark 0.18 ~ia64
