--- a/media-tv/xawtv/ChangeLog
+++ b/media-tv/xawtv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/xawtv
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/xawtv/ChangeLog,v 1.40 2006/06/30 18:19:55 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/xawtv/ChangeLog,v 1.41 2006/07/03 23:10:20 flameeyes Exp $
+
+  03 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> xawtv-3.95-r1.ebuild:
+  Add missing xset and bdftopcf dependencies as per bug #138783.
 
   30 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> -xawtv-3.95.ebuild:
   Remove version.
