--- a/net-irc/loqui/ChangeLog
+++ b/net-irc/loqui/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/loqui
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/loqui/ChangeLog,v 1.32 2006/03/18 19:03:44 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/loqui/ChangeLog,v 1.33 2006/07/04 01:32:43 dang Exp $
+
+  04 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> loqui-0.4.4.ebuild:
+  Marked ~amd64
 
   18 Mar 2006; Sven Wegener <swegener@gentoo.org> -loqui-0.4.2.ebuild:
   Remove unneeded ebuild.
