--- a/dev-perl/Compress-Zlib/ChangeLog
+++ b/dev-perl/Compress-Zlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Compress-Zlib
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Compress-Zlib/Attic/ChangeLog,v 1.47 2006/05/22 08:21:18 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Compress-Zlib/Attic/ChangeLog,v 1.48 2006/07/04 04:52:33 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  Compress-Zlib-1.41.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   22 May 2006; Christian Hartmann <ian@gentoo.org>
   -Compress-Zlib-1.33.ebuild, -Compress-Zlib-1.35.ebuild:
