--- a/dev-perl/Data-Compare/ChangeLog
+++ b/dev-perl/Data-Compare/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Data-Compare
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.10 2006/07/01 01:11:02 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.11 2006/07/04 07:33:57 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Data-Compare-0.11.ebuild,
+  Data-Compare-0.13.ebuild:
+  Fixed RDEPEND wrt bug #134781; fixed header
 
   01 Jul 2006; Michael Cummings <mcummings@gentoo.org>
   Data-Compare-0.13.ebuild:
