--- a/dev-perl/Eidetic/ChangeLog
+++ b/dev-perl/Eidetic/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Eidetic
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Eidetic/ChangeLog,v 1.4 2006/03/30 22:33:10 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Eidetic/ChangeLog,v 1.5 2006/07/04 07:51:11 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Eidetic-2.003003.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Eidetic-2.003003.ebuild:
   Mark 2.003003 ~ia64
