--- a/dev-perl/Event-ExecFlow/ChangeLog
+++ b/dev-perl/Event-ExecFlow/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Event-ExecFlow
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Event-ExecFlow/ChangeLog,v 1.8 2006/06/23 17:44:14 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Event-ExecFlow/ChangeLog,v 1.9 2006/07/04 08:06:57 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  Event-ExecFlow-0.61.ebuild, Event-ExecFlow-0.62.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
 *Event-ExecFlow-0.62 (23 Jun 2006)
 
