--- a/media-libs/exscalibar/ChangeLog
+++ b/media-libs/exscalibar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/exscalibar
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/exscalibar/Attic/ChangeLog,v 1.9 2006/05/27 12:38:34 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/exscalibar/Attic/ChangeLog,v 1.10 2006/07/04 08:36:00 corsair Exp $
+
+  04 Jul 2006; Markus Rothe <corsair@gentoo.org> exscalibar-1.0.4.ebuild:
+  Stable on ppc64; bug #139095
 
   27 May 2006; Diego Pettenò <flameeyes@gentoo.org>
   exscalibar-1.0.4.ebuild:
