--- a/dev-perl/GD-Graph3d/ChangeLog
+++ b/dev-perl/GD-Graph3d/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/GD-Graph3d
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/GD-Graph3d/ChangeLog,v 1.14 2006/04/24 15:36:19 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/GD-Graph3d/ChangeLog,v 1.15 2006/07/04 08:53:55 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> GD-Graph3d-0.63.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> GD-Graph3d-0.63.ebuild:
   Add ~x86-fbsd keyword.
