--- a/dev-perl/HTML-TableExtract/ChangeLog
+++ b/dev-perl/HTML-TableExtract/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/HTML-TableExtract
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-TableExtract/ChangeLog,v 1.27 2006/06/23 18:13:29 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-TableExtract/ChangeLog,v 1.28 2006/07/04 10:17:46 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  HTML-TableExtract-2.06.ebuild, HTML-TableExtract-2.08.ebuild,
+  HTML-TableExtract-2.09.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
 *HTML-TableExtract-2.09 (23 Jun 2006)
 
