--- a/dev-perl/HTTP-DAV/ChangeLog
+++ b/dev-perl/HTTP-DAV/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/HTTP-DAV
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-DAV/ChangeLog,v 1.8 2006/03/30 22:51:24 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-DAV/ChangeLog,v 1.9 2006/07/04 10:23:54 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> HTTP-DAV-0.31.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> HTTP-DAV-0.31.ebuild:
   Mark 0.31 ~ia64
