--- a/dev-perl/IO-Digest/ChangeLog
+++ b/dev-perl/IO-Digest/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IO-Digest
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Digest/ChangeLog,v 1.10 2006/03/28 23:04:13 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Digest/ChangeLog,v 1.11 2006/07/04 10:28:11 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> IO-Digest-0.10.ebuild:
+  Fixed RDEPEND wrt bug #134781; fixed DEPEND
 
   28 Mar 2006; Aron Griffis <agriffis@gentoo.org> IO-Digest-0.10.ebuild:
   Mark 0.10 stable on ia64
