--- a/dev-perl/IO-Zlib/ChangeLog
+++ b/dev-perl/IO-Zlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/IO-Zlib
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Zlib/Attic/ChangeLog,v 1.17 2006/04/24 15:12:16 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Zlib/Attic/ChangeLog,v 1.18 2006/07/04 11:23:51 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> IO-Zlib-1.01.ebuild,
+  IO-Zlib-1.04.ebuild:
+  Fixed RDEPEND wrt bug #134781; fixed header
 
   24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> IO-Zlib-1.04.ebuild:
   Add ~x86-fbsd keyword.
