--- a/dev-perl/Net-SSLeay/ChangeLog
+++ b/dev-perl/Net-SSLeay/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-SSLeay
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.35 2006/04/09 17:27:03 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.36 2006/07/04 13:56:12 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Net-SSLeay-1.23.ebuild,
+  Net-SSLeay-1.25.ebuild:
+  Fixed RDEPEND wrt bug #134781; fixed header
 
   09 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> Net-SSLeay-1.25.ebuild:
   Add ~x86-fbsd keyword.
