--- a/net-mail/dovecot/ChangeLog
+++ b/net-mail/dovecot/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.56 2006/06/28 10:19:17 uberlord Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.57 2006/07/04 18:55:23 uberlord Exp $
+
+*dovecot-1.0_rc2 (04 Jul 2006)
+
+  04 Jul 2006; Roy Marples <uberlord@gentoo.org> +dovecot-1.0_rc2.ebuild:
+  Version bump.
 
 *dovecot-1.0_rc1 (28 Jun 2006)
 
