--- a/www-client/galeon/ChangeLog
+++ b/www-client/galeon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/galeon
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/galeon/Attic/ChangeLog,v 1.23 2006/06/27 22:56:22 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/galeon/Attic/ChangeLog,v 1.24 2006/07/04 19:20:55 gustavoz Exp $
+
+  04 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  galeon-2.0.1-r1.ebuild:
+  Stable on sparc wrt #138278
 
 *galeon-2.0.1-r1 (27 Jun 2006)
 
