--- a/dev-perl/Spreadsheet-WriteExcel/ChangeLog
+++ b/dev-perl/Spreadsheet-WriteExcel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Spreadsheet-WriteExcel
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Spreadsheet-WriteExcel/ChangeLog,v 1.18 2006/05/22 14:57:23 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Spreadsheet-WriteExcel/ChangeLog,v 1.19 2006/07/04 19:59:36 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  Spreadsheet-WriteExcel-2.15.ebuild, Spreadsheet-WriteExcel-2.17.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
 *Spreadsheet-WriteExcel-2.17 (22 May 2006)
 
