--- a/app-cdr/cdrtools/ChangeLog
+++ b/app-cdr/cdrtools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/cdrtools
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.148 2006/07/04 08:39:36 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.149 2006/07/05 01:46:11 tsunam Exp $
+
+  05 Jul 2006; Joshua Jackson <tsunam@gentoo.org>
+  cdrtools-2.01.01_alpha10.ebuild:
+  Stable x86; bug #138932
 
   04 Jul 2006; Markus Rothe <corsair@gentoo.org>
   cdrtools-2.01.01_alpha10.ebuild:
