--- a/app-cdr/k9copy/ChangeLog
+++ b/app-cdr/k9copy/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/k9copy
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/ChangeLog,v 1.13 2006/04/20 00:56:00 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/ChangeLog,v 1.14 2006/07/05 02:40:15 flameeyes Exp $
+
+*k9copy-1.1.0_beta1 (05 Jul 2006)
+
+  05 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
+  +k9copy-1.1.0_beta1.ebuild:
+  Bump to latest beta.
 
   20 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> k9copy-1.0.4.ebuild:
   Add Categories to the .desktop file to make it appear on the right menu.
