--- a/dev-perl/Net-DNS/ChangeLog
+++ b/dev-perl/Net-DNS/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Net-DNS
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.86 2006/07/04 13:34:37 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.87 2006/07/05 12:44:41 mcummings Exp $
+
+*Net-DNS-0.58 (05 Jul 2006)
+
+  05 Jul 2006; Michael Cummings <mcummings@gentoo.org> +Net-DNS-0.58.ebuild:
+  Version bump
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org> Net-DNS-0.48.ebuild,
   Net-DNS-0.49.ebuild, Net-DNS-0.53.ebuild, Net-DNS-0.53-r1.ebuild,
