--- a/dev-perl/XML-Catalog/ChangeLog
+++ b/dev-perl/XML-Catalog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-Catalog
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Catalog/ChangeLog,v 1.14 2006/06/29 23:35:34 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Catalog/ChangeLog,v 1.15 2006/07/05 13:15:10 ian Exp $
+
+  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  XML-Catalog-0.02-r1.ebuild, XML-Catalog-0.02-r2.ebuild:
+  Fixed RDEPEND wrt bug #134781; fixed header; fixed DEPEND
 
   29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   XML-Catalog-0.02-r2.ebuild:
