--- a/media-sound/snd-aoa/ChangeLog
+++ b/media-sound/snd-aoa/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/snd-aoa
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/snd-aoa/Attic/ChangeLog,v 1.6 2006/06/20 12:13:29 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/snd-aoa/Attic/ChangeLog,v 1.7 2006/07/05 15:53:22 josejx Exp $
+
+*snd-aoa-060705 (05 Jul 2006)
+
+  05 Jul 2006; Joseph Jezak <josejx@gentoo.org> +snd-aoa-060705.ebuild:
+  Added latest version.
 
 *snd-aoa-060620 (20 Jun 2006)
 
