--- a/dev-perl/pgperl/ChangeLog
+++ b/dev-perl/pgperl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/pgperl
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/pgperl/ChangeLog,v 1.6 2006/03/30 23:52:04 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/pgperl/ChangeLog,v 1.7 2006/07/05 19:11:56 ian Exp $
+
+  05 Jul 2006; Christian Hartmann <ian@gentoo.org> pgperl-2.0.2.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> pgperl-2.0.2.ebuild:
   Mark 2.0.2 ~ia64
