--- a/dev-libs/xmlrpc-c/ChangeLog
+++ b/dev-libs/xmlrpc-c/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/xmlrpc-c
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.14 2006/07/01 09:33:46 hollow Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.15 2006/07/06 00:13:22 hollow Exp $
+
+*xmlrpc-c-1.05-r2 (06 Jul 2006)
+
+  06 Jul 2006; Benedikt Böhm <hollow@gentoo.org>
+  +files/xmlrpc-c-1.05-client-global.patch, +files/xmlrpc-c-1.05-pic.patch,
+  +xmlrpc-c-1.05-r2.ebuild:
+  install missing client_global.h; fix PIC handling on amd64
 
 *xmlrpc-c-1.05-r1 (01 Jul 2006)
 
