--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.398 2006/07/05 19:46:10 gothgirl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.399 2006/07/06 01:00:43 tester Exp $
+
+  06 Jul 2006; Olivier Crête <tester@gentoo.org>
+  gaim-2.0.0_beta3-r1.ebuild:
+  Fixed typo
+
+  06 Jul 2006; Olivier Crête <tester@gentoo.org>
+  gaim-2.0.0_beta3-r1.ebuild:
+  Fixed typo
 
   05 Jul 2006; gothgirl <gothgirl@gentoo.org> gaim-2.0.0_beta3-r1.ebuild:
   Fixed X idle time support.
