--- a/media-plugins/vdr-clock/ChangeLog
+++ b/media-plugins/vdr-clock/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-clock
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-clock/ChangeLog,v 1.2 2006/04/17 13:40:11 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-clock/ChangeLog,v 1.3 2006/07/06 13:27:58 zzam Exp $
+
+  06 Jul 2006; Matthias Schwarzott <zzam@gentoo.org>
+  +files/vdr-clock-0.0.5b-gcc4.diff, vdr-clock-0.0.5b-r1.ebuild:
+  Added gcc4-compatibility-patch.
 
   17 Apr 2006; Matthias Schwarzott <zzam@gentoo.org>
   vdr-clock-0.0.5b-r1.ebuild:
