--- a/dev-perl/Text-Tabs+Wrap/ChangeLog
+++ b/dev-perl/Text-Tabs+Wrap/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Text-Tabs+Wrap
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-Tabs+Wrap/Attic/ChangeLog,v 1.12 2006/04/24 18:53:39 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-Tabs+Wrap/Attic/ChangeLog,v 1.13 2006/07/06 14:21:18 ian Exp $
+
+*Text-Tabs+Wrap-2006.0705 (06 Jul 2006)
+
+  06 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  +Text-Tabs+Wrap-2006.0705.ebuild:
+  Version bump; added tests; cleanup
 
 *Text-Tabs+Wrap-2005.0824 (24 Apr 2006)
 
