--- a/x11-apps/xdriinfo/ChangeLog
+++ b/x11-apps/xdriinfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/xdriinfo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdriinfo/ChangeLog,v 1.18 2006/07/02 18:55:11 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdriinfo/ChangeLog,v 1.19 2006/07/06 16:05:44 spyderous Exp $
+
+  06 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xdriinfo-1.0.1.ebuild:
+  (#138920) Add missing virtual/opengl dep (Ernestas Liubarskij).
 
   02 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xdriinfo-1.0.1.ebuild:
