--- a/net-im/wildfire/ChangeLog
+++ b/net-im/wildfire/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/wildfire
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/wildfire/Attic/ChangeLog,v 1.5 2006/07/04 16:20:55 humpback Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/wildfire/Attic/ChangeLog,v 1.6 2006/07/06 17:44:59 nichoj Exp $
+
+  06 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
+  files/wildfire-3.0.0-for.patch, wildfire-3.0.0.ebuild:
+  Fixed for patch. Added ant-contrib dependency.
 
   04 Jul 2006; Gustavo Felisberto <humpback@gentoo.org>;
   +files/wildfire-3.0.0-for.patch, wildfire-3.0.0.ebuild:
