--- a/dev-perl/Compress-Zlib/ChangeLog
+++ b/dev-perl/Compress-Zlib/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Compress-Zlib
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Compress-Zlib/Attic/ChangeLog,v 1.48 2006/07/04 04:52:33 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Compress-Zlib/Attic/ChangeLog,v 1.49 2006/07/06 18:32:48 superlag Exp $
+
+*Compress-Zlib-1.42 (06 Jul 2006)
+
+  06 Jul 2006; Aaron Kulbe <superlag@gentoo.org> +Compress-Zlib-1.42.ebuild:
+  Version bump to 1.42 - keyworded on all arches.
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   Compress-Zlib-1.41.ebuild:
