--- a/x11-drivers/nvidia-drivers/ChangeLog
+++ b/x11-drivers/nvidia-drivers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.1 2006/07/06 19:52:04 augustus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.2 2006/07/06 21:12:54 augustus Exp $
+
+  06 Jul 2006; Kristopher Kersey <augustus@gentoo.org>
+  nvidia-drivers-1.0.8762.ebuild:
+  Quick fix to close bug #133138.
 
 *nvidia-drivers-1.0.8762 (06 Jul 2006)
 
