--- a/x11-misc/Xorgautoconfig/ChangeLog
+++ b/x11-misc/Xorgautoconfig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/Xorgautoconfig
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.17 2006/07/06 19:27:13 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.18 2006/07/06 21:50:12 josejx Exp $
+
+  06 Jul 2006; Joseph Jezak <josejx@gentoo.org>
+  Xorgautoconfig-0.2.4-r1.ebuild:
+  Marked ppc stable.
 
 *Xorgautoconfig-0.2.4-r1 (06 Jul 2006)
 
