--- a/dev-tcltk/itk/ChangeLog
+++ b/dev-tcltk/itk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/itk
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/itk/ChangeLog,v 1.9 2006/07/06 02:43:19 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/itk/ChangeLog,v 1.10 2006/07/07 00:08:55 squinky86 Exp $
+
+  06 Jul 2006; Jon Hood <squinky86@gentoo.org> itk-3.3-r1.ebuild:
+  Stable on amd64, bug #139367.
 
   06 Jul 2006; Jason Wever <weeve@gentoo.org> itk-3.3-r1.ebuild:
   Stable on SPARC wrt bug #139367.
