--- a/dev-java/jvmstat/ChangeLog
+++ b/dev-java/jvmstat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jvmstat
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jvmstat/ChangeLog,v 1.1 2006/07/06 17:17:45 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jvmstat/ChangeLog,v 1.2 2006/07/07 04:13:15 mr_bones_ Exp $
+
+  07 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> jvmstat-3.0.ebuild:
+  fix dep typo
 
 *jvmstat-3.0 (06 Jul 2006)
 
