--- a/media-sound/lilypond/ChangeLog
+++ b/media-sound/lilypond/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/lilypond
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.45 2006/04/28 03:40:13 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.46 2006/07/07 06:55:58 mr_bones_ Exp $
+
+  07 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
+  lilypond-2.8.0-r1.ebuild:
+  remove non-existent app-text/ghostscript-afpl dep
 
   28 Apr 2006; Jason Wever <weeve@gentoo.org> lilypond-2.8.0-r1.ebuild:
   Re-added ~sparc keyword as it went missing.
