--- a/media-plugins/vdr-mplayer/ChangeLog
+++ b/media-plugins/vdr-mplayer/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-plugins/vdr-mplayer
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-mplayer/ChangeLog,v 1.4 2006/06/27 22:06:19 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-mplayer/ChangeLog,v 1.5 2006/07/07 08:04:00 zzam Exp $
+
+*vdr-mplayer-0.9.14-r2 (07 Jul 2006)
+
+  07 Jul 2006; Matthias Schwarzott <zzam@gentoo.org>
+  +files/vdr-mplayer-0.9.14-slave-mode-default.diff,
+  +vdr-mplayer-0.9.14-r2.ebuild:
+  Set default control mode to slave.
 
   27 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
   vdr-mplayer-0.9.14-r1.ebuild:
