--- a/media-plugins/xmms-arts/ChangeLog
+++ b/media-plugins/xmms-arts/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/xmms-arts
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-arts/Attic/ChangeLog,v 1.38 2006/07/07 04:28:03 tsunam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-arts/Attic/ChangeLog,v 1.39 2006/07/07 15:56:23 tcort Exp $
+
+  07 Jul 2006; Thomas Cort <tcort@gentoo.org> xmms-arts-0.7.1-r2.ebuild:
+  Stable on alpha wrt Bug #136009.
 
   07 Jul 2006; Joshua Jackson <tsunam@gentoo.org> xmms-arts-0.7.1-r2.ebuild:
   Stable x86; bug #136009
