--- a/sci-electronics/modelsim/ChangeLog
+++ b/sci-electronics/modelsim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/modelsim
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/modelsim/Attic/ChangeLog,v 1.3 2006/07/02 14:59:18 calchan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/modelsim/Attic/ChangeLog,v 1.4 2006/07/07 17:28:03 calchan Exp $
+
+  07 Jul 2006; Denis Dupeyron <calchan@gentoo.org> modelsim-5.7d.ebuild:
+  Replaced einfo occurences with elog.
 
   02 Jul 2006; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
   Adjusted metadata, see bug #138062.
