--- a/sys-fs/mdadm/ChangeLog
+++ b/sys-fs/mdadm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/mdadm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.39 2006/07/02 20:35:33 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.40 2006/07/07 18:35:06 corsair Exp $
+
+  07 Jul 2006; Markus Rothe <corsair@gentoo.org> mdadm-2.5.2.ebuild:
+  Stable on ppc64; bug #138194
 
 *mdadm-2.5.2 (02 Jul 2006)
 
