--- a/gnome-extra/gnome-media/ChangeLog
+++ b/gnome-extra/gnome-media/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-media
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.113 2006/07/01 15:11:12 allanonjl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.114 2006/07/08 02:52:10 mr_bones_ Exp $
+
+  08 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
+  gnome-media-2.10.2.ebuild:
+  drop mips keyword per geoman
 
 *gnome-media-2.14.2 (01 Jul 2006)
 
